--- a/src/app/css/global.css
+++ b/src/app/css/global.css
@@ -24,38 +24,34 @@ header {
   width: 100vw;
   position: sticky;
   top: 0px;
-
-  background-color: #ffffff;
 }
 
 footer {
   background-color: #171717;
   padding: 2rem 1rem 8rem 1rem;
-  color: #ffffff;
   display: flex;
   flex-direction: column;
   gap: 2rem;
 }
-
-dialog {
-  width: 75vw;
+dialog.nav {
+  z-index: 2;
+  width: 75%;
   height: 100vh;
   max-height: 100vh;
-  background-color: #ffffff;
-  position: fixed;
-  left: auto;
-  color: black;
-  border: none;
-  outline: none;
-  padding: 2rem 1rem;
 
-  z-index: 2;
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
+  position: absolute;
+  left: auto;
+  top: 0;
+  border: none;
+
+  padding: 2rem 1rem;
+}
+dialog.nav::backdrop {
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
-dialog::backdrop {
-  background-color: black;
-  opacity: 0.75;
+.IMG {
+  background-color: var(--img);
+  width: 100%;
+  aspect-ratio: 2/1;
 }
