--- a/src/app/css/typo.css
+++ b/src/app/css/typo.css
@@ -1,22 +1,22 @@
-@import url("https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200");
+@import url('https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200');
 
 * {
   font: var(--font);
 }
 
 .material-symbols-outlined {
-  font-variation-settings: "wght" 300;
+  font-variation-settings: 'wght' 300;
   font-weight: 300;
 }
 
 .icon-24 {
   font-size: 1.5rem;
-  font-variation-settings: "opsz" 24;
+  font-variation-settings: 'opsz' 24;
 }
 
 .icon-40 {
   font-size: 2.5rem;
-  font-variation-settings: "opsz" 40;
+  font-variation-settings: 'opsz' 40;
 }
 
 p {
