--- a/src/app/css/typo.css
+++ b/src/app/css/typo.css
@@ -11,11 +11,13 @@
 
 .icon-24 {
   font-size: 1.5rem;
+  height: 1.5rem;
   font-variation-settings: 'opsz' 24;
 }
 
 .icon-40 {
   font-size: 2.5rem;
+  height: 2.5rem;
   font-variation-settings: 'opsz' 40;
 }
 
