--- a/src/app/css/global.css
+++ b/src/app/css/global.css
@@ -1,4 +1,6 @@
-header,footer,main {
+header,
+footer,
+section {
   padding-inline: max(
     1rem,
     calc((100% - 768px) / 2)
@@ -14,7 +16,6 @@ main {
 }
 
 section {
-  padding: 0 1rem;
   min-height: 2rem;
 
   display: flex;
@@ -54,6 +55,19 @@ dialog.nav {
 }
 dialog.nav::backdrop {
   background-color: rgba(0, 0, 0, 0.5);
+}
+
+.FAQ {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.FAQ .trigger {
+  all: unset;
+  display: flex;
+  border-bottom: 1px solid hsl(0, 0%, 0%, 0.15);
+  padding-bottom: 0.5rem;
+  justify-content: space-between;
 }
 
 .IMG {
