--- a/src/app/css/util.css
+++ b/src/app/css/util.css
@@ -22,6 +22,16 @@
 
 /* PADDING */
 
+.p-2 {
+  padding: 2rem;
+}
+.p-1 {
+  padding: 1rem;
+}
+
+.pb-2 {
+  padding-bottom: 1rem;
+}
 .pb-1 {
   padding-bottom: 1rem;
 }
