--- a/src/app/css/typo.css
+++ b/src/app/css/typo.css
@@ -1,9 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200');
 
-* {
-  font: var(--font);
-}
-
 .material-symbols-outlined {
   font-variation-settings: 'wght' 300;
   font-weight: 300;
@@ -19,6 +15,14 @@
   font-size: 2.5rem;
   height: 2.5rem;
   font-variation-settings: 'opsz' 40;
+}
+
+.icon-fill {
+  font-variation-settings: 'FILL' 1;
+}
+
+* {
+  font-weight: 300;
 }
 
 p {
