--- a/src/app/css/reset.css
+++ b/src/app/css/reset.css
@@ -20,6 +20,8 @@ a {
   margin: 0;
   -ms-overflow-style: none;
   scrollbar-width: none;
+  border: none;
+  text-align: left;
 }
 ::-webkit-scrollbar {
   display: none;
